--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
         <button class="btn2">Sign up</button>
       </div>
     </div>
+    <footer class="footer">
+      <div>Copyrights the odin project</div>
+    </footer>
   </body>
 </html>
